about > fix layout issue

--- a/wp-content/themes/cloudappers_theme/css/custom/default-style.css
+++ b/wp-content/themes/cloudappers_theme/css/custom/default-style.css
@@ -2723,7 +2723,7 @@ section.project-url .next-project-btn {
 }
 
 #footer .address img {
-    width: 65px;
+    width: 66px;
     vertical-align: top;
 }
 
@@ -2742,6 +2742,7 @@ section.project-url .next-project-btn {
     color: rgb(52, 52, 52);
     line-height: 2.533;
     transition: 0.5s;
+    font-weight: 500;
 }
 
 #footer .footer-menu a:hover {
@@ -2751,16 +2752,17 @@ section.project-url .next-project-btn {
 
 #footer .address p {
     font-size: 14px;
-    font-family: "Open Sans";
     line-height: 1.714;
     text-align: left;
-    padding-left: 27px;
+    padding-left: 31px;
     margin-top: 20px;
     text-align: left;
 }
 
 #footer .address {
     text-align: right;
+    padding-top: 9px;
+    font-weight: 500;
 }
 
 #footer .address .details {
@@ -2785,7 +2787,7 @@ section.project-url .next-project-btn {
 
 #footer .social ul {
     text-indent: -3px;
-    padding-left: 113px;
+    padding-left: 117px;
 }
 
 #footer .social ul li {
@@ -2843,15 +2845,17 @@ section.project-url .next-project-btn {
 
 }
 
-#footer p.mob {
+#footer p.mobile {
     background: url("../../img/mobile-gray-icon@3x.svg") no-repeat left center;
     background-size: 10px 18px;
+    color: rgb(52, 52, 52);
 
 }
 
 #footer p.phone {
     background: url("../../img/phone-gray-icon@3x.svg") no-repeat left center;
     background-size: 18px 18px;
+    color: rgb(52, 52, 52);
 }
 
 /***** Contact us page *****/
